@@ -19,31 +19,29 @@ public class CSelectDialog extends JInternalFrame implements CInfoParent {
     CButton bCancel;
     CButton bSelect;
     Component o;
-    CSelectParent t;
-    CProperties p_ldo;
-    private CButton bNew;
-    private CButton bEdit;
-    private CButton bDelete;
-    private CListDataObject ldo;
+    transient CSelectParent t;
+    CProperties pLdo;
+    private transient CListDataObject ldo;
+    private static final String BDELETE = "bdelete";
+    private static final String BEDIT = "bedit";
+    private static final String OBJECTNAME = "objectName";
 
     public CSelectDialog(Component o, CSelectParent t, CProperties p) {
-//		super((Frame)o,true);
         super("Auswahl", true, true, true);
         this.o = o;
         this.t = t;
         this.p = p;
-///        setIconImage(Toolkit.getDefaultToolkit().createImage("../images/logo.gif"));
-//		setLocationRelativeTo(t);
         setDefaultCloseOperation(WindowConstants.DISPOSE_ON_CLOSE);
         CTableModel tabModel = new CTableModel();
         tabModel.addColumn(p.get("label"));
         tabModel.addRows(CDataManager.getInstance().getSelect(p));
         tab.setModel(tabModel);
-        tab.setAutoResizeMode(CTable.AUTO_RESIZE_ALL_COLUMNS);
-        int height = Math.min(Math.max((tab.getRowCount() + 1) * 20, 100), 600);
+        tab.setAutoResizeMode(JTable.AUTO_RESIZE_ALL_COLUMNS);
+        int height = Math.clamp((tab.getRowCount() + 1) * 20L, 100, 600);
         int width = 200;
         sp.setPreferredSize(new Dimension(width, height));
         tab.addMouseListener(new MouseAdapter() {
+            @Override
             public void mouseClicked(MouseEvent e) {
                 int clickCount = e.getClickCount();
                 if (clickCount >= 2) {
@@ -51,7 +49,6 @@ public class CSelectDialog extends JInternalFrame implements CInfoParent {
                 }
             }
         });
-///        setTitle((String) p.get("label"));
         Container cp = getContentPane();
         cp.setLayout(new BorderLayout());
         cp.add(sp, BorderLayout.CENTER);
@@ -73,29 +70,25 @@ public class CSelectDialog extends JInternalFrame implements CInfoParent {
     }
 
     public CSelectDialog(Component o, CSelectParent t, CListDataObject ldo) {
-//		super((Frame)o,true);
         super("Auswahl", true, true, true);
         CMessage.print("Hallo");
         this.o = o;
         this.t = t;
         this.ldo = ldo;
         setDefaultCloseOperation(WindowConstants.DISPOSE_ON_CLOSE);
-///        setIconImage(Toolkit.getDefaultToolkit().createImage("../images/logo.gif"));
-//		if (t instanceof Component) {
-//			setLocationRelativeTo((Component)t);
-//		}
-        p_ldo = ldo.getCProperties();
+        pLdo = ldo.getCProperties();
         tab.setCListDataObject(ldo);
-        if (p_ldo.get("order") != null) {
-            tab.setModel(ldo.select(p_ldo));
+        if (pLdo.get("order") != null) {
+            tab.setModel(ldo.select(pLdo));
         } else {
             tab.setModel(ldo.select(1));
         }
-        int height = Math.min(Math.max((tab.getRowCount() + 1) * 20, 100), 600);
+        int height = Math.clamp((tab.getRowCount() + 1) * 20L, 100, 600);
         int width = 200;
         sp.setPreferredSize(new Dimension(width, height));
         tab.setWidth(ldo.getCProperties());
         tab.addMouseListener(new MouseAdapter() {
+            @Override
             public void mouseClicked(MouseEvent e) {
                 int clickCount = e.getClickCount();
                 if (clickCount >= 2) {
@@ -103,7 +96,6 @@ public class CSelectDialog extends JInternalFrame implements CInfoParent {
                 }
             }
         });
-//		setTitle((String) p.get("label"));
         Container cp = getContentPane();
         cp.setLayout(new BorderLayout());
         cp.add(sp, BorderLayout.CENTER);
@@ -114,33 +106,30 @@ public class CSelectDialog extends JInternalFrame implements CInfoParent {
         bSelect = CButtonFactory.getButton("ok");
         bSelect.addActionListener(e -> bSelect());
         p2.add(bSelect);
-        bNew = CButtonFactory.getButton("new");
-        if (p_ldo.get("bnew") == null || p_ldo.get("bnew").toString().equalsIgnoreCase("")) {
+        CButton bNew = CButtonFactory.getButton("new");
+        if (pLdo.get("bnew") == null || pLdo.get("bnew").toString().equalsIgnoreCase("")) {
             bNew.addActionListener(e -> bNew());
         }
-//		p2.add(bNew);
-        bEdit = CButtonFactory.getButton("edit");
-        if (p_ldo.get("bedit") == null || p_ldo.get("bedit").toString().equalsIgnoreCase("")) {
+        CButton bEdit = CButtonFactory.getButton("edit");
+        if (pLdo.get(BEDIT) == null || pLdo.get(BEDIT).toString().equalsIgnoreCase("")) {
             bEdit.addActionListener(e -> bEdit());
         }
-//		p2.add(bEdit);
-        bDelete = CButtonFactory.getButton("delete");
-        if (p_ldo.get("bdelete") == null || p_ldo.get("bdelete").toString().equalsIgnoreCase("")) {
+        CButton bDelete = CButtonFactory.getButton("delete");
+        if (pLdo.get(BDELETE) == null || pLdo.get(BDELETE).toString().equalsIgnoreCase("")) {
             bDelete.addActionListener(e -> bDelete());
         }
-//		p2.add(bDelete);
 
         p1.add(p3, BorderLayout.EAST);
         p3.setLayout(new FlowLayout(FlowLayout.RIGHT));
         bCancel = CButtonFactory.getButton("cancel");
         bCancel.addActionListener(e -> bCancel());
-        addButton(bNew, p_ldo.get("bnew"));
-        addButton(bEdit, p_ldo.get("bedit"));
-        addButton(bDelete, p_ldo.get("bdelete"));
+        addButton(bNew, pLdo.get("bnew"));
+        addButton(bEdit, pLdo.get(BEDIT));
+        addButton(bDelete, pLdo.get(BDELETE));
         p3.add(bCancel);
 
-        if (p_ldo.get("color") != null) {
-            String color = p_ldo.get("color").toString();
+        if (pLdo.get("color") != null) {
+            String color = pLdo.get("color").toString();
             int r = Integer.parseInt(color.substring(0, 3));
             int g = Integer.parseInt(color.substring(3, 6));
             int b = Integer.parseInt(color.substring(6));
@@ -150,6 +139,7 @@ public class CSelectDialog extends JInternalFrame implements CInfoParent {
         setVisible(true);
     }
 
+    @Override
     public void dispose() {
         t.resetSelectDialog();
         super.dispose();
@@ -179,27 +169,27 @@ public class CSelectDialog extends JInternalFrame implements CInfoParent {
     }
 
     private CProperties getSelectedElement() {
-        CProperties p = new CProperties();
-        p.put("object_name", ldo.getCProperties().get("object_name").toString());
-        p.put("keys", tab.getKeys());
-        return p;
+        CProperties newP = new CProperties();
+        newP.put(OBJECTNAME, ldo.getCProperties().get(OBJECTNAME).toString());
+        newP.put("keys", tab.getKeys());
+        return newP;
     }
 
     protected CProperties getNewElement() {
-        CProperties p = new CProperties();
-        p.put("object_name", ldo.getCProperties().get("object_name").toString());
-        p.put("key", "");
-        return p;
+        CProperties anotherP = new CProperties();
+        anotherP.put(OBJECTNAME, ldo.getCProperties().get(OBJECTNAME).toString());
+        anotherP.put("key", "");
+        return anotherP;
     }
 
     protected void bSelect() {
-        if (t instanceof CDisplayFieldListBean) {
+        if (t instanceof CDisplayFieldListBean cdisplayfieldlistbean) {
             int[] rows = tab.getSelectedRows();
             Object[] values = new Object[rows.length];
             for (int i = 0; i < rows.length; i++) {
                 values[i] = tab.getValueAt(rows[i], 0);
             }
-            ((CDisplayFieldListBean) t).insert(values);
+            (cdisplayfieldlistbean).insert(values);
         } else {
             t.setValue(tab.getValueAt(tab.getSelectedRow(), 0));
         }
@@ -207,18 +197,13 @@ public class CSelectDialog extends JInternalFrame implements CInfoParent {
     }
 
     public void refresh() {
-        if (p_ldo.get("order") != null) {
-            tab.setModel(ldo.select(p_ldo));
+        if (pLdo.get("order") != null) {
+            tab.setModel(ldo.select(pLdo));
         } else {
             tab.setModel(ldo.select(1));
         }
     }
 
-
-/*	public int getOrderColumn() {
-		// Feste Sortierung, immer nach der ersten Spalte
-		return 1;
-	}*/
 
     private void addButton(CButton button, Object option) {
         if (option == null || option.toString().isEmpty()) {
